--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,13 @@ buildscript {
 	}
 }
 
+plugins {
+    id 'net.saliman.cobertura' version '2.3.1'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
+}
+
+cobertura.coverageFormats = ['html', 'xml']
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
