--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ buildscript {
 }
 
 plugins {
-    id 'net.saliman.cobertura' version '2.3.1'
-    id 'com.github.kt3k.coveralls' version '2.8.2'
+	id 'net.saliman.cobertura' version '2.3.1'
+	id 'com.github.kt3k.coveralls' version '2.8.2'
 	id 'com.craigburke.karma' version '1.4.4'
 }
 
@@ -24,7 +24,10 @@ apply plugin: 'org.springframework.boot'
 
 karma {
 	frameworks = ['jasmine']
-	failOnEmptyTestSuite = false
+	files = [
+		"src/test/js/*spec.js",
+		"src/main/resources/static/js/*.js"
+	]
 }
 
 group = 'org.wecancodeit'
