--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,7 @@ apply plugin: 'org.springframework.boot'
 karma {
 	frameworks = ['jasmine']
 	browsers = [
-		'Chrome',
-		'ChromeHeadless'
+		'Chrome'
 	]
 	files = [
 		"src/test/js/*spec.js",
