--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: java
+sudo: required
+dist: trusty
 addons:
   chrome: stable
+before_script:
+  - "sudo chown root /opt/google/chrome/chrome-sandbox"
+  - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
 after_success:
-- ./gradlew cobertura coveralls
+  - ./gradlew cobertura coveralls
