Tested the database url as an empty string, which works apparently

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,9 @@ repositories {
 	mavenCentral()
 }
 
+test {
+	environment "JDBC_DATABASE_URL", "" //I don't know how this empty quote is working but it works just as well as 'jdbc:h2:~/test' for some reason
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
