Specified the platform as postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.platform=postgresql
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
