--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ test {
 }
 
 dependencies {
+	compile 'javax.xml.bind:jaxb-api:2.3.0'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
